# attabhak

./: .gitignore  README.md  pyproject.toml
attabhak/: config.py  model.py  monitor.py  server.py
attabhak/clients/: santhings.py
attabhak/cmd/: app.py
attabhak/monitors/: __init__.py  dustrack.py  mqtt_monitor.py
scripts/: attabhak.service  install.sh  run-app  run-app-develop
