[project]
name = "attabhak"
version = "0.1.0"
description = ""
authors = [
    {name = "Thanathip Limna",email = "boatkrap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocoap (>=0.4.16,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
attabhak = "attabhak.cmd.app:main"
