[project]
name = "attabhak"
version = "0.1.0"
description = ""
authors = [
    {name = "Thanathip Limna",email = "boatkrap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "aiocoap (>=0.4.16,<0.5.0)",
    "aiomqtt (>=2.4.0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.1.0)",
    "aiosqlite (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
attabhak = "attabhak.cmd.app:main"


[dependency-groups]
dev = [
    "py-mon (>=2.1.0,<3.0.0)"
]
